@@ -4036,4 +4036,6 @@
     ]
     p    
 
+/(?i)[\xc3\xa9\xc3\xbd]|[\xc3\xa9\xc3\xbdA]/8
+
 / End of testinput1 /
